# grounded

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  sources.yaml
.github/workflows/: ci.yml
eval/: graph_questions.yaml  questions.yaml
grounded/: api.py  chunk.py  cli.py  config.py  embed.py  evaluate.py  gate.py  generate.py  ingest.py  ipguard.py  query.py  retrieve.py  store.py
grounded/graph/: extract.py  extract_llm.py  kuzu_store.py  query.py  store.py  terms.py  types.py
tests/: conftest.py  test_graph.py  test_pipeline.py
